--- a/fdroid/repo/index.html
+++ b/fdroid/repo/index.html
@@ -38,9 +38,9 @@
         apps. To add it to your F-Droid client, scan the QR code (click it to enlarge) or use this URL:
       </p>
       <p class="center" style="margin-top:.5em">
-        <a href="https://github.com/unbuttoned-app/unbuttoned-releases/raw/main/fdroid/repo?fingerprint=84EED985EEEDEC5067D6E3BD7EB0BAA10F67EEE2D2EE9D898E207DD9357A2F7F">
+        <a href="https://raw.githubusercontent.com/unbuttoned-app/unbuttoned-releases/main/fdroid/repo/?fingerprint=84EED985EEEDEC5067D6E3BD7EB0BAA10F67EEE2D2EE9D898E207DD9357A2F7F">
           <code style="color:#000000;font-weight:bold;">
-            https://github.com/unbuttoned-app/unbuttoned-releases/raw/main/fdroid/repo
+            https://raw.githubusercontent.com/unbuttoned-app/unbuttoned-releases/main/fdroid/repo/
           </code>
         </a>
       </p>
